--- a/public/01-room-d.html
+++ b/public/01-room-d.html
@@ -213,7 +213,7 @@
 							</div>
 							<div class="sMainInfo__selects-wrap">
 								<div class="row">
-									<div class="sMainInfo__col col-md col-xl-3">
+									<div class="sMainInfo__col col-sm-6 col-lg">
 										<div class="custom-select-wrap custom-select-wrap--third-type">
 											<select class="basic-select basic-select--js">
 												<option>Все бригады</option>
@@ -230,7 +230,7 @@
 											</select>
 										</div>
 									</div>
-									<div class="sMainInfo__col col-md col-xl-3">
+									<div class="sMainInfo__col col-sm-6 col-lg">
 										<div class="custom-select-wrap custom-select-wrap--third-type">
 											<select class="basic-select basic-select--js">
 												<option>Все поверхности</option>
@@ -247,7 +247,7 @@
 											</select>
 										</div>
 									</div>
-									<div class="sMainInfo__col col-md col-xl-3">
+									<div class="sMainInfo__col col-sm-6 col-lg">
 										<div class="custom-select-wrap custom-select-wrap--third-type">
 											<select class="basic-select basic-select--js">
 												<option>Все работы</option>
@@ -264,7 +264,7 @@
 											</select>
 										</div>
 									</div>
-									<div class="col col-md-12 order-md-last me-auto">
+									<div class="col col-lg-12 order-lg-last me-auto">
 										<div class="custom-select-wrap custom-select-wrap--second-type">
 											<div class="custom-select-wrap__label text-secondary">Сортировать по
 											</div>
@@ -276,7 +276,7 @@
 											</select>
 										</div>
 									</div>
-									<div class="col-auto ms-md-auto">
+									<div class="col-auto ms-lg-auto">
 										<a class="sMainInfo__reset" href="#">Сбросить
 										</a>
 									</div>
