--- a/public/03-task-d.html
+++ b/public/03-task-d.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Кухня</title>
+		<title>Задачи</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -76,7 +76,7 @@
 									</nav>
 								</div>
 								<div class="page-head__col page-head__col--title col-lg order-md-4">
-									<h1>Кухня
+									<h1>Задачи
 									</h1>
 									<div class="task-stat">
 										<svg class="icon icon-fist ">
@@ -93,7 +93,7 @@
 						<div class="container-fluid">
 							<div class="sMainInfo__selects-wrap">
 								<div class="row">
-									<div class="sMainInfo__col col-md col-xl-3">
+									<div class="sMainInfo__col col-sm-6 col-lg">
 										<div class="custom-select-wrap custom-select-wrap--third-type">
 											<select class="basic-select basic-select--js">
 												<option>Все объекты</option>
@@ -110,7 +110,7 @@
 											</select>
 										</div>
 									</div>
-									<div class="sMainInfo__col col-md col-xl-3">
+									<div class="sMainInfo__col col-sm-6 col-lg">
 										<div class="custom-select-wrap custom-select-wrap--third-type">
 											<select class="basic-select basic-select--js">
 												<option>Все бригады</option>
@@ -127,7 +127,7 @@
 											</select>
 										</div>
 									</div>
-									<div class="sMainInfo__col col-md col-xl-3">
+									<div class="sMainInfo__col col-sm-6 col-lg">
 										<div class="custom-select-wrap custom-select-wrap--third-type">
 											<select class="basic-select basic-select--js">
 												<option>Все поверхности</option>
@@ -144,7 +144,7 @@
 											</select>
 										</div>
 									</div>
-									<div class="sMainInfo__col col-md col-xl-3">
+									<div class="sMainInfo__col col-sm-6 col-lg">
 										<div class="custom-select-wrap custom-select-wrap--third-type">
 											<select class="basic-select basic-select--js">
 												<option>Все работы</option>
@@ -161,7 +161,7 @@
 											</select>
 										</div>
 									</div>
-									<div class="col col-md-12 order-md-last me-auto">
+									<div class="col col-lg-12 order-lg-last me-auto">
 										<div class="custom-select-wrap custom-select-wrap--second-type">
 											<div class="custom-select-wrap__label text-secondary">Сортировать по
 											</div>
@@ -173,7 +173,7 @@
 											</select>
 										</div>
 									</div>
-									<div class="col-auto ms-md-auto">
+									<div class="col-auto ms-lg-auto">
 										<a class="sMainInfo__reset" href="#">Сбросить
 										</a>
 									</div>
