--- a/public/04-edit-team.html
+++ b/public/04-edit-team.html
@@ -69,43 +69,43 @@
 											<div class="col-md">
 												<ul>
 													<li>
-														<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="surface" type="checkbox"/><span class="custom-input__text form-check-label">Шпатлевка стен</span>
+														<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="work" type="checkbox"/><span class="custom-input__text form-check-label">Шпатлевка стен</span>
 														</label>
 													</li>
 													<li>
-														<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="surface" type="checkbox"/><span class="custom-input__text form-check-label">Штукатурка стен</span>
+														<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="work" type="checkbox"/><span class="custom-input__text form-check-label">Штукатурка стен</span>
 														</label>
 													</li>
 													<li>
-														<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="surface" type="checkbox"/><span class="custom-input__text form-check-label">Заливка пола</span>
+														<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="work" type="checkbox"/><span class="custom-input__text form-check-label">Заливка пола</span>
 														</label>
 													</li>
 													<li>
-														<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="surface" type="checkbox"/><span class="custom-input__text form-check-label">Натяжка потолка</span>
+														<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="work" type="checkbox"/><span class="custom-input__text form-check-label">Натяжка потолка</span>
 														</label>
 													</li>
 													<li>
-														<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="surface" type="checkbox"/><span class="custom-input__text form-check-label">Шпатлевка стен</span>
+														<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="work" type="checkbox"/><span class="custom-input__text form-check-label">Шпатлевка стен</span>
 														</label>
 													</li>
 													<li>
-														<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="surface" type="checkbox"/><span class="custom-input__text form-check-label">Штукатурка стен</span>
+														<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="work" type="checkbox"/><span class="custom-input__text form-check-label">Штукатурка стен</span>
 														</label>
 													</li>
 													<li>
-														<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="surface" type="checkbox"/><span class="custom-input__text form-check-label">Заливка пола</span>
+														<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="work" type="checkbox"/><span class="custom-input__text form-check-label">Заливка пола</span>
 														</label>
 													</li>
 													<li>
-														<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="surface" type="checkbox"/><span class="custom-input__text form-check-label">Натяжка потолка</span>
+														<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="work" type="checkbox"/><span class="custom-input__text form-check-label">Натяжка потолка</span>
 														</label>
 													</li>
 													<li>
-														<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="surface" type="checkbox"/><span class="custom-input__text form-check-label">Шпатлевка стен</span>
+														<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="work" type="checkbox"/><span class="custom-input__text form-check-label">Шпатлевка стен</span>
 														</label>
 													</li>
 													<li>
-														<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="surface" type="checkbox"/><span class="custom-input__text form-check-label">Штукатурка стен</span>
+														<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="work" type="checkbox"/><span class="custom-input__text form-check-label">Штукатурка стен</span>
 														</label>
 													</li>
 												</ul>
@@ -117,7 +117,9 @@
 									<div class="form-wrap__wrap">
 										<h4>Работники</h4>
 										<div class="row">
-											<div class="form-wrap__title-col col-md-auto">Работник 1
+											<div class="form-wrap__title-col col-md-auto"> 
+												<div class="form-wrap__title">Работник 1
+												</div>
 											</div>
 											<div class="col-md">
 												<div class="form-wrap__worker-wrap">
@@ -133,13 +135,15 @@
 											</div>
 										</div>
 										<div class="row">
-											<div class="form-wrap__title-col col-md-auto">
-												 Работник 2
-												<a class="form-wrap__delete" href="#">
-													<svg class="icon icon-delete ">
-														<use xlink:href="img/svg/sprite.svg#delete"></use>
-													</svg>
-												</a>
+											<div class="form-wrap__title-col col-md-auto"> 
+												<div class="form-wrap__title">
+													 Работник 2
+													<a class="form-wrap__delete" href="#">
+														<svg class="icon icon-delete ">
+															<use xlink:href="img/svg/sprite.svg#delete"></use>
+														</svg>
+													</a>
+												</div>
 											</div>
 											<div class="col-md">
 												<div class="form-wrap__worker-wrap">
