--- a/public/05-create-user.html
+++ b/public/05-create-user.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Редактирование бригады</title>
+		<title>Создание пользователя</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -31,7 +31,7 @@
 			<div class="sCreateObject" id="sCreateObject">
 				<div class="sCreateObject__body">
 					<div class="sCreateObject__left-side">
-						<h2>Редактирование пользователя</h2>
+						<h2>Создание пользователя</h2>
 						<div class="form-wrap">
 							<div class="form-wrap__row row">
 								<div class="col-12">
