--- a/public/parts/footer.html
+++ b/public/parts/footer.html
@@ -63,7 +63,7 @@
 				</a>
 			</div>
 			<div class="col-md">
-				<a class="modal-win__btn btn btn-light" href="#">Удалить
+				<a class="modal-win__btn btn btn-light" href="#">Подтвердить
 				</a>
 			</div>
 		</div>
