--- a/public/04-create-team.html
+++ b/public/04-create-team.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Редактирование бригады</title>
+		<title>Создание бригады</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -31,7 +31,7 @@
 			<div class="sCreateObject" id="sCreateObject">
 				<div class="sCreateObject__body">
 					<div class="sCreateObject__left-side">
-						<h2>Редактирование бригады</h2>
+						<h2>Создание бригады</h2>
 						<div class="form-wrap">
 							<div class="form-wrap__edit-row row">
 								<div class="col-12">
@@ -127,28 +127,6 @@
 													</div>
 													<div class="form-wrap__input-wrap form-group">
 														<label><input class="form-wrap__input form-control" name="Телефон" type="tel" placeholder="Телефон"/><span class="form-wrap__input-title">Телефон</span>
-														</label>
-													</div>
-												</div>
-											</div>
-										</div>
-										<div class="row">
-											<div class="form-wrap__title-col col-md-auto">
-												 Работник 2
-												<a class="form-wrap__delete" href="#">
-													<svg class="icon icon-delete ">
-														<use xlink:href="img/svg/sprite.svg#delete"></use>
-													</svg>
-												</a>
-											</div>
-											<div class="col-md">
-												<div class="form-wrap__worker-wrap">
-													<div class="form-wrap__input-wrap form-group">
-														<label><input class="form-wrap__input form-control" name="ФИО" type="text" placeholder="ФИО" value="Петров Петр Петрович"/><span class="form-wrap__input-title">ФИО</span>
-														</label>
-													</div>
-													<div class="form-wrap__input-wrap form-group">
-														<label><input class="form-wrap__input form-control" name="Телефон" type="tel" placeholder="Телефон" value="+7 (919) 811-28-44"/><span class="form-wrap__input-title">Телефон</span>
 														</label>
 													</div>
 												</div>
